<resources>
    <string name="app_name">Pic-a-Pup</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_classification">Pic-a-Breed</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="camera">Pic-a-Breed</string>
    <string name="file_provider_authority" translatable="false">com.pic_a_pup.dev.fileprovider</string>
    <string name="log_out">Log Out</string>
    <string name="petfinder_cb_label">I want to know where I can adopt this doggo!</string>
    <string name="wiki_cb_label">I want more information about this breed!</string>
    <string name="my_location">My Location:</string>
    <string name="info">Info:</string>
    <string name="breed">Breed:</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="collar">Pic-a-Collar</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number (5551234567)</string>
    <string name="doggos">Doggos:</string>
    <string name="dog_lover">Dog Lover:</string>
    <string name="lost">Lost</string>
    <string name="map">Map</string>
    <string name="they_go_by">They go by...</string>
    <string name="tell_us_about_your_friend">Tell us about your friend</string>
    <string name="find_breed">Find Breed</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="cant_identify_breed_message">Sorry, no information about this breed.</string>
    <string name="title_activity_maps">Pic-a-Park</string>
    <string name="title_map">Map</string>
    <string name="dog">Dog</string>
    <string name="use_the_camera">Use the Camera</string>
    <string name="how_would_you_like_to_upload_your_picture">How would you like to upload your picture?</string>
    <string name="use_gallery">Use Gallery</string>
    <string name="let_them_know">Let them Know</string>
    <string name="temp">temp</string>
    <string name="city_unavailable">City Unavailable</string>
    <string name="state_unavailable"> </string>
    <string name="zip_unavailable">Zip Unavailable</string>
    <string name="phone_number_unavailable">Phone Number Unavailable</string>
    <string name="breed_may_be_available_at">Breed may be available at:</string>
    <string name="philadelphia">Philadelphia</string>
    <string name="pa">PA</string>
    <string name="_19001">19001</string>
    <string name="_1234567890">1234567890</string>

</resources>
