<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_camera"
        android:checkable="false"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/camera" />

    <item
        android:id="@+id/navigation_collar"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/collar_icon"
        android:title="@string/collar" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/dog_paw_icon"
        android:title="@string/profile" />

</menu>
