<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pic_a_pup.dev.pic_a_pup.Controller.LoginActivity">

    <ImageView
        android:id="@+id/pap_logo_img"
        android:layout_width="309dp"
        android:layout_height="292dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108"
        app:srcCompat="@drawable/pap_gradient_text" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pap_logo_img"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/pass_edit_text"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
        tools:text="Pass" />

    <LinearLayout
        android:id="@+id/horiz_btn_layout"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="52dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_edit_text"
        app:layout_constraintVertical_bias="0.246">

        <Button
            android:id="@+id/sign_up_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_btn"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_btn"
            android:text="@string/log_in" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
