<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pic_a_pup.dev.pic_a_pup.Controller.ClassificationActivity">

    <RelativeLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/searchImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pre_response_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/image_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/my_location"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/postalCode_edittext"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:textSize="20sp"
                tools:text="19122" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="200dp"
                android:layout_height="65dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_corner_btn"
                android:text="@string/find_breed"
                android:textColor="@android:color/background_light"
                android:textSize="20sp" />

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/post_response_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/image_layout"
        android:scrollbarStyle="insideOverlay"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:verticalScrollbarPosition="defaultPosition">

            <ProgressBar
                android:id="@+id/dog_prob_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:indeterminate="true"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@android:drawable/progress_horizontal"
                android:progressTint="@color/colorPrimary"
                android:visibility="visible"
                tools:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/breed_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/breed"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/breed_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#551053" />

            </LinearLayout>

            <TextView
                android:id="@+id/breed_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="18sp"
                android:text="Please try again."/>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation_classification_page"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>